# slam_with_ICP

./: README.md  README_上机步骤.md  README_代码说明.md  上机步骤.md  代码功能说明.md  离线依赖清单.txt
catkin_ws/: build_workspace.sh
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/slamware_loop_slam/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/slamware_loop_slam/config/: pose_graph_slam_params.yaml  scan_icp_params.yaml
catkin_ws/src/slamware_loop_slam/launch/: pose_graph_slam.launch  scan_icp.launch  slamware_no_loop.launch  slamware_with_loop.launch
catkin_ws/src/slamware_loop_slam/scripts/: pose_graph_slam_node.py  scan_icp_node.py
catkin_ws/src/slamware_loop_slam/src/slamware_loop_slam/: align.py  icp.py  loop_detection.py  pose.py  pose_graph.py  scan_to_points.py  transform.py
offline_deps/python2_pip/: README_离线安装说明.txt  install_offline_python2_deps.sh  requirements_python2.txt  requirements_python2_linux_wheels.txt  requirements_python2_pure.txt
tools/: plot_results.py
