<?xml version="1.0"?>
<package format="2">
  <name>slamware_loop_slam</name>
  <version>0.1.0</version>
  <description>ROS1 Melodic Python2 2D LaserScan ICP and pose-graph SLAM package for Slamware scan topic.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-scipy</exec_depend>

  <export/>
</package>
